# lightclip

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  Start-LightClip.ps1  index.html  package.json  pnpm-lock.yaml  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-build.yml  tauri-2-build.yml
docs/: ARCHITECTURE.md  COMMIT_CONVENTION.md  GOVERNANCE.md  PRIVACY.md  RELEASE.md  ROADMAP.md  TROUBLESHOOTING.md
scripts/: check-source-integrity.mjs  generate-icons.ps1  test-packaged-shortcut.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/main/: index.ts  store.ts
src/preload/: index.ts
src/renderer/src/: App.vue  env.d.ts  runtime.ts  search.ts  utils.ts
src/renderer/src/assets/: main.css
src/shared/: features.ts  types.ts
